# onadata

./: .bowerrc  .codacy.yml  .coveragerc  .dockerignore  .drone.yml  .failing-travis.yml  .flake8  .gitignore  .gitmodules  .isort.cfg  .jshintrc  .mailmap  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .travis.yml  .travis.yml.disabled  CHANGES.rst  CONTRIBUTING.MD  Dockerfile  Dockerfile.xenial  LICENSE  MANIFEST.in  Makefile  README.rst  Vagrantfile  ansible  bower.json  common_tags.py  dev_install.md  django-1.7-notes.md  docker-compose-py2.yml  docker-compose-xenial.yml  docker-compose.yml  docker-startup-api.sh  docker-startup-celery.sh  docker-startup-install-requirements.sh  email  fabfile.py  features.md  (+22 more)
.claude/skills/: update-requirements.md
.claude/version-bump/: SKILL.rst
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  apt-packages.txt  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  cucumber-integration-tests.yml  docker-image-build.yml  ecr-image-build-alpine.yml  ecr-image-build-w-arm-runner.yml  ecr-image-build.yml  release-drafter.yml
api/: forms.py  mixins.py  tools.py  urls.py  views.py
api/models/: __init__.py  models.py  organization_profile.py  project_xform.py
api/tests/: test_api.py  test_data_api.py  test_forms_api.py  test_models.py  test_orgs_api.py  test_profiles_api.py  test_projects_api.py  test_stats_api.py  test_teams_api.py  test_tools.py  test_users_api.py
api/viewsets/: data_viewset.py  mean_viewset.py  median_viewset.py  mode_viewset.py  note_viewset.py  project_viewset.py  range_viewset.py  stats_viewset.py  submissionstats_viewset.py  user_viewset.py
apps/api/: serializers.py  signals.py  tools.py  urls.py
apps/formhub/: urls.py
apps/main/: forms.py  google_export.py  registration_urls.py  registration_views.py  signals.py  views.py
apps/odk_logger/: admin.py  factory.py  import_tools.py  views.py  xform_instance_parser.py
apps/odk_viewer/: pandas_mongo_bridge.py  tasks.py  views.py  xls_writer.py
apps/restservice/: forms.py  models.py  utils.py  views.py
apps/sms_support/: parser.py  tools.py
apps/stats/: tasks.py  tests.py  utils.py  views.py
config/nginx/: nginx.conf
design-system/unicef-brand/: README.md  brand-guidelines.html  design-system.md
docker/: docker-entrypoint.sh
docker/onadata-uwsgi/: Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  Dockerfile.ubuntu.dev  docker-compose.yml  uwsgi.ini
docker/postgis/: Dockerfile
docs/: Makefile  api.md  apps.api.management.commands.rst  apps.api.management.rst  apps.api.migrations.rst  apps.api.models.rst  apps.api.rst  apps.api.tests.management.rst  apps.api.tests.models.rst  apps.api.tests.rst  apps.api.tests.views.rst  apps.api.tests.viewsets.rst  apps.api.viewsets.rst  apps.logger.management.commands.rst  apps.logger.management.rst  apps.logger.migrations.rst  apps.logger.models.rst  apps.logger.rst  apps.logger.tests.models.rst  apps.logger.tests.rst  apps.main.management.commands.rst  apps.main.management.rst  apps.main.migrations.rst  apps.main.models.rst  apps.main.rst  apps.main.templatetags.rst  apps.main.tests.rst  apps.restservice.migrations.rst  apps.restservice.rst  apps.restservice.services.rst  apps.restservice.tests.rst  apps.rst  apps.sms_support.providers.rst  apps.sms_support.rst  apps.sms_support.tests.rst  apps.stats.migrations.rst  apps.stats.rst  apps.viewer.management.commands.rst  apps.viewer.management.rst  apps.viewer.migrations.rst  (+145 more)
docs/_themes/: flask_theme_support.py
docs/mkdocs/: custom.css  index.md  users.md
extras/: reserved_accounts.txt
formhub/: context_processors.py  settings.py  urls.py  wsgi_app.py
js_tests/: env_jasmine.conf.js  utils.js
main/: backends.py  forms.py  google_export.py  signals.py  views.py
odk_logger/: import_tools.py  views.py  xform_instance_parser.py
odk_viewer/: forms.py  pandas_mongo_bridge.py  reparse.py  tasks.py  views.py  xls_writer.py
onadata/: __init__.py  celery.py  devwsgi.py  settings.py
onadata/libs/utils/csv-import/: Cargo.toml
onadata/libs/utils/csv-import/src/: lib.rs
requirements/: README.md  azure.in  azure.pip  base.in  base.pip  common.pip  dev.in  dev.pip  docs.in  docs.pip  latest.pip  makefile_dependencies.pip  mysql.pip  pricing.pip  s3.in  s3.pip  ses.in  ses.pip
restservice/: RestServiceInterface.py  __init__.py  utils.py
script/: i18ntool.py  install  install_database  install_macos  install_ubuntu  local_settings.py  run_js_tests  setup_staging  start_celeryd  test
settings/: common.py  example_gis.py  production_example.py
sms_support/: tools.py
source/: conf.py  index.rst
staff/: views.py
stats/: tasks.py  tests.py  utils.py  views.py
templates/: base.html  header.html  home_topbar.html  ona_base.html  topbar.html
utils/: audit.py  briefcase_client.py  common_tags.py  export_tools.py  log.py  logger_tools.py  model_tools.py  user_auth.py  viewer_tools.py
(+2435 files in other folders)
