[metadata]
name = onadata
version = 5.0.2
description = Collect Analyze and Share Data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/onaio/onadata
author = Ona Systems Inc
author_email = support@ona.io
license = Copyright (c) 2025 Ona Systems Inc All rights reserved
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://api.ona.io/api
    Source = https://github.com/onaio/onadata
    Tracker = https://github.com/onaio/onadata/issues

[options]
packages = find:
platforms = any
tests_require =
    flake8
    flaky
    httmock
    requests-mock
install_requires =
    Django>=5,<5.2
    django-guardian
    django-registration-redux
    django-templated-email
    django-reversion
    django-filter<24.2
    django-nose
    django-ordered-model
    #generic relation
    django-query-builder
    celery
    #cors
    django-cors-headers
    django-debug-toolbar
    #oauth2 support
    django-oauth-toolkit
    #oauth2client
    jsonpickle
    #jwt
    PyJWT
    #captcha
    recaptcha-client
    #API support
    djangorestframework
    djangorestframework-csv
    djangorestframework-gis
    djangorestframework-guardian
    djangorestframework-jsonapi
    djangorestframework-jsonp
    djangorestframework-xml
    #geojson
    geojson
    #tagging
    django-taggit
    #database
    psycopg2-binary>2.7.1
    pymongo
    #sms support
    dict2xml
    lxml>=4.9.1
    #memcached support
    pylibmc
    python-memcached
    #XML Instance API utility
    xmltodict
    Markdown
    #others
    unicodecsv
    xlwt
    openpyxl
    dpath
    elaphe3
    httplib2
    modilabs-python-utils
    numpy
    Pillow
    python-dateutil
    requests
    simplejson
    uwsgi
    django-activity-stream
    sentry-sdk>=2.8,<3
    paho-mqtt
    cryptography>=44.0.0
    #Monitoring
    analytics-python
    appoptics-metrics
    # Deprecation tagging
    deprecated
    # Redis cache
    redis[hiredis]
    django-redis
    # osm
    defusedxml
    # Google exports
    google-auth-oauthlib
    google-auth
    ujson>=5.4.0
    django-csp
python_requires = >= 3.9
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1
