[package]
name = "csv_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "import_helper"
crate_type = ["cdylib"]

[dependencies]
csv = "1.1.6"
pyo3 = { version = "0.16.3", features = ["extension-module"] }
